bluec-tests/tests/invalid/types_fn_pointer/invalid_initializer2.c
double d = 0.0;
int (*fn)(void) = &d;

int main(void) {
    return 0;
}